# fbk_glasses_bot

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  docker-compose.yml  fbk_glasses_bot.py  pyproject.toml  requirements.txt
.docker/: Dockerfile  launch.sh  pkglist
